Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-37837

declarative-camera video record fails on Sony Xperia arc android 4.0.4

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.6.0 Beta
    • 5.3.0 Beta1
    • None
    • Android version 4.0.4 / kernel 2.6.32.9-perf)
      Sony Xperia arc smartphone
      dev environment: Mac OSX 10.9.2 / QT creator 3.0.82
    • Android
    • 43f3d14a99431da5e0ebd29f6c1f27526a6e2d48

    Description

      The sample runs totally fine on on a Galaxy S4 android phone (Android version 4.3 / kernel 3.4.0-2082040).

      On a Sony Xperia arc (Android version 4.0.4 / kernel 2.6.32.9-perf), the image capture works fine. But the video record of the sample freezes the application. As soon as you click the "Record" button, the application output in QT creator print the following error:

      W/SurfaceTexture(14395): freeAllBuffersExceptCurrentLocked called but mQueue is not empty
      W/MediaMetadataRetriever(14395): MediaMetadataRetriever server died!
      W/IMediaDeathNotifier(14395): media server died
      W/Camera  (14395): Camera server died!
      W/Camera  (14395): ICamera died
      W/Qt      (14395): qdeclarativecamerarecorder.cpp:583 (void QDeclarativeCameraRecorder::updateRecorderError(QMediaRecorder::Error)): QMediaRecorder error: "Unknown error."
      E/Camera  (14395): Error 100

      The default API level of declarative-camera sample is 19, and it doesn't sounds good for android version 4.0.4. So I tried to install the android API level 15 and set it as the "Android build SDK" in the declarative-camera project "Run" settings. But the issue remains the same.

      I don't have another device with Android version 4.0.4 so I cannot be sure this issue is related to this android version.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            ylopes Yoann Lopes
            khelkun Sébastien Perin
            Votes:
            1 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes